--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -113,6 +113,10 @@ config CC_DEBUG
   bool "Enable debug information"
   default n
 
+config WATCHPOINT
+	bool "Enable watchpoint in monitor"
+	default n
+
 config CC_ASAN
   depends on MODE_SYSTEM
   bool "Enable address sanitizer"
