make some changes to npc and clone a template from github to learn chisel

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -7,7 +7,7 @@ test:
 	mill -i __.test
 
 verilog:
-	$(call git_commit, "generate verilog")
+#$(call git_commit, "generate verilog")
 	mkdir -p $(BUILD_DIR)
 	mill -i __.test.runMain Elaborate -td $(BUILD_DIR)
 
